tests/test170.rael.exp
Error [1:12]: No newline or block after 'if' statement
| if (1 + 2) log 2
|            ^
